# ki-startup-command-center

./: .env.example  .gitignore  .gitmodules  .mcp.env  .mcp.json  CLAUDE.md  Makefile  README.md  data-room-verification-checklist.md  docker-compose.yml
data-room/: CLAUDE.md  README.md
data-room/00-executive-summary/: ki-executive-summary.md
data-room/00-investor-navigation/: strategic-roadmap.md
data-room/01-product-intelligence/: README.md  comprehensive-user-understanding.md  human-ai-human-framework.md  insight-delivery-framework.md  ki-conversational-system.md  problem-validation-research.md  user-experience-design.md
data-room/02-market-opportunity/: comprehensive-market-analysis.md
data-room/03-business-model/: ki-business-model-canvas.md
data-room/04-financial-projections/: financial-model-analysis.md
docs/: mcp-setup.md
scripts/: git-submodule-pull.sh  git-submodule-push.sh  git-submodule-status.sh  verify-mcp.sh
submodules/automation/n8n-workflows/workflows/: customer-interview-tracking.json
submodules/business/data-room/: CLAUDE.md
submodules/business/data-room/00-executive-summary/: ki-executive-summary.md
submodules/business/planning/: mvp-roadmap.md  weekly-goals.md
submodules/product/ki-platform/: CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
submodules/product/ki-platform/apps/langgraph-backend/: .env.example  pyproject.toml
submodules/product/ki-platform/apps/langgraph-backend/src/: main.py
submodules/product/ki-platform/apps/langgraph-backend/src/core/: config.py
submodules/product/ki-platform/apps/langgraph-backend/src/graphs/: ki_relationship_graph.py
submodules/product/slides/: slide1.tsx  slide10.tsx  slide2.tsx  slide3.tsx  slide3b.tsx  slide4.tsx  slide4b.tsx  slide5.tsx  slide6.tsx  slide7.tsx  slide7b.tsx  slide8.tsx  slide9.tsx
(+69 files in other folders)
